Added messages list screen (not working yet). It's possible however to open a chat using a 'new chat' button and inputting the userId. It will show any previous messages (if any) and sending messages will save the message to the database and show it on the screen. Logging in once will mean that you are logged in permanently (by saving the token). Added logout button which clears the token and reroutes to the prompt to login/register.

--- a/frontend/app/src/main/AndroidManifest.xml
+++ b/frontend/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatListActivity" />
+        <activity android:name=".ChatActivity" />
     </application>
 
 </manifest>
