--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=changemeinprod!
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=8443
+server.ssl.key-store=classpath:server.p12
+server.ssl.key-store-password=haslo
+server.ssl.key-store-type=PKCS12
+
+server.ssl.trust-store=classpath:truststore.p12
+server.ssl.trust-store-password=123456
+server.ssl.client-auth=need
