--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=postgres
 spring.datasource.password=changemeinprod!
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8443
 server.ssl.key-store=classpath:server.p12
